--- a/main/index.html
+++ b/main/index.html
@@ -5,7 +5,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
 </head>
 <body>
-  <canvas id="pde" data-processing-sources="main.pde preload.pde"></canvas>
+  <canvas id="pde" data-processing-sources="main.pde preload.pde Big_monster.pde Blue_Monster.pde Clock.pde Coco.pde Icehole.pde Item.pde Player.pde WhiteMonster.pde "></canvas>
   <div id="console"></div>
 </body>
 </html>
